convSNN/convSNN_hls/vitis_hls.log

****** Vitis HLS - High-Level Synthesis from C, C++ and OpenCL v2023.1 (64-bit)
  **** SW Build 3854077 on May  4 2023
  **** IP Build 3864474 on Sun May  7 20:36:21 MDT 2023
  **** SharedData Build 3865790 on Sun May 07 13:33:03 MDT 2023
    ** Copyright 1986-2022 Xilinx, Inc. All Rights Reserved.
    ** Copyright 2022-2023 Advanced Micro Devices, Inc. All Rights Reserved.

source /tools/Xilinx/Vitis_HLS/2023.1/scripts/vitis_hls/hls.tcl -notrace
INFO: [HLS 200-10] Running '/tools/Xilinx/Vitis_HLS/2023.1/bin/unwrapped/lnx64.o/vitis_hls'
INFO: [HLS 200-10] For user 'coder' on host 'coder-kwlaial-kellylaijetnet' (Linux_x86_64 version 6.8.0-52-generic) on Thu Apr 16 04:24:53 UTC 2026
INFO: [HLS 200-10] On os Ubuntu 20.04.6 LTS
INFO: [HLS 200-10] In directory '/home/coder/Desktop/s2n2/convSNN/convSNN_hls'
Sourcing Tcl script 'fc_finn.tcl'
INFO: [HLS 200-1510] Running: open_project fc_finn_prj 
INFO: [HLS 200-10] Opening project '/home/coder/Desktop/s2n2/convSNN/convSNN_hls/fc_finn_prj'.
INFO: [HLS 200-1510] Running: set_top fc_finn_top 
INFO: [HLS 200-1510] Running: add_files /home/coder/Desktop/s2n2/convSNN/fc_finn_config.h -cflags -std=c++14 -I/home/coder/Desktop/s2n2/convSNN -I/home/coder/Documents/s2n2/finn-hlslib-lif 
INFO: [HLS 200-10] Adding design file '/home/coder/Desktop/s2n2/convSNN/fc_finn_config.h' to the project
INFO: [HLS 200-1510] Running: add_files /home/coder/Desktop/s2n2/convSNN/fc_finn_ref.h -cflags -std=c++14 -I/home/coder/Desktop/s2n2/convSNN -I/home/coder/Documents/s2n2/finn-hlslib-lif 
INFO: [HLS 200-10] Adding design file '/home/coder/Desktop/s2n2/convSNN/fc_finn_ref.h' to the project
INFO: [HLS 200-1510] Running: add_files /home/coder/Desktop/s2n2/convSNN/fc_finn_top.cpp -cflags -std=c++14 -I/home/coder/Desktop/s2n2/convSNN -I/home/coder/Documents/s2n2/finn-hlslib-lif 
INFO: [HLS 200-10] Adding design file '/home/coder/Desktop/s2n2/convSNN/fc_finn_top.cpp' to the project
INFO: [HLS 200-1510] Running: add_files /home/coder/Documents/s2n2/finn-hlslib-lif/bnn-library.h 
INFO: [HLS 200-10] Adding design file '/home/coder/Documents/s2n2/finn-hlslib-lif/bnn-library.h' to the project
INFO: [HLS 200-1510] Running: add_files /home/coder/Documents/s2n2/finn-hlslib-lif/mvau.hpp 
INFO: [HLS 200-10] Adding design file '/home/coder/Documents/s2n2/finn-hlslib-lif/mvau.hpp' to the project
INFO: [HLS 200-1510] Running: add_files /home/coder/Documents/s2n2/finn-hlslib-lif/weights.hpp 
INFO: [HLS 200-10] Adding design file '/home/coder/Documents/s2n2/finn-hlslib-lif/weights.hpp' to the project
INFO: [HLS 200-1510] Running: add_files /home/coder/Documents/s2n2/finn-hlslib-lif/streamtools.h 
INFO: [HLS 200-10] Adding design file '/home/coder/Documents/s2n2/finn-hlslib-lif/streamtools.h' to the project
INFO: [HLS 200-1510] Running: add_files /home/coder/Documents/s2n2/finn-hlslib-lif/fclayer.h 
INFO: [HLS 200-10] Adding design file '/home/coder/Documents/s2n2/finn-hlslib-lif/fclayer.h' to the project
INFO: [HLS 200-1510] Running: add_files /home/coder/Documents/s2n2/finn-hlslib-lif/activations.hpp 
INFO: [HLS 200-10] Adding design file '/home/coder/Documents/s2n2/finn-hlslib-lif/activations.hpp' to the project
INFO: [HLS 200-1510] Running: add_files /home/coder/Documents/s2n2/finn-hlslib-lif/interpret.hpp 
INFO: [HLS 200-10] Adding design file '/home/coder/Documents/s2n2/finn-hlslib-lif/interpret.hpp' to the project
INFO: [HLS 200-1510] Running: add_files /home/coder/Documents/s2n2/finn-hlslib-lif/mac.hpp 
INFO: [HLS 200-10] Adding design file '/home/coder/Documents/s2n2/finn-hlslib-lif/mac.hpp' to the project
INFO: [HLS 200-1510] Running: add_files /home/coder/Documents/s2n2/finn-hlslib-lif/utils.hpp 
INFO: [HLS 200-10] Adding design file '/home/coder/Documents/s2n2/finn-hlslib-lif/utils.hpp' to the project
INFO: [HLS 200-1510] Running: add_files /home/coder/Documents/s2n2/finn-hlslib-lif/mmv.hpp 
INFO: [HLS 200-10] Adding design file '/home/coder/Documents/s2n2/finn-hlslib-lif/mmv.hpp' to the project
INFO: [HLS 200-1510] Running: add_files /home/coder/Documents/s2n2/finn-hlslib-lif/dma.h 
INFO: [HLS 200-10] Adding design file '/home/coder/Documents/s2n2/finn-hlslib-lif/dma.h' to the project
INFO: [HLS 200-1510] Running: add_files /home/coder/Documents/s2n2/finn-hlslib-lif/maxpool.h 
INFO: [HLS 200-10] Adding design file '/home/coder/Documents/s2n2/finn-hlslib-lif/maxpool.h' to the project
INFO: [HLS 200-1510] Running: add_files /home/coder/Documents/s2n2/finn-hlslib-lif/vvau.hpp 
INFO: [HLS 200-10] Adding design file '/home/coder/Documents/s2n2/finn-hlslib-lif/vvau.hpp' to the project
INFO: [HLS 200-1510] Running: add_files /home/coder/Documents/s2n2/finn-hlslib-lif/pool.hpp 
INFO: [HLS 200-10] Adding design file '/home/coder/Documents/s2n2/finn-hlslib-lif/pool.hpp' to the project
INFO: [HLS 200-1510] Running: add_files /home/coder/Documents/s2n2/finn-hlslib-lif/slidingwindow.h 
INFO: [HLS 200-10] Adding design file '/home/coder/Documents/s2n2/finn-hlslib-lif/slidingwindow.h' to the project
INFO: [HLS 200-1510] Running: add_files -tb /home/coder/Desktop/s2n2/convSNN/fc_finn_tb.cpp -cflags -std=c++14 -I/home/coder/Desktop/s2n2/convSNN -I/home/coder/Documents/s2n2/finn-hlslib-lif 
INFO: [HLS 200-10] Adding test bench file '/home/coder/Desktop/s2n2/convSNN/fc_finn_tb.cpp' to the project
INFO: [HLS 200-1510] Running: open_solution xcvu9p-flga2577-2-e 
INFO: [HLS 200-10] Opening solution '/home/coder/Desktop/s2n2/convSNN/convSNN_hls/fc_finn_prj/xcvu9p-flga2577-2-e'.
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [HLS 200-1611] Setting target device to 'xcvu9p-flga2577-2-e'
INFO: [HLS 200-1505] Using flow_target 'vivado'
Resolution: For help on HLS 200-1505 see www.xilinx.com/cgi-bin/docs/rdoc?v=2023.1;t=hls+guidance;d=200-1505.html
INFO: [HLS 200-1510] Running: set_part xcvu9p-flga2577-2-e 
INFO: [HLS 200-1510] Running: create_clock -period 10 -name default 
INFO: [HLS 200-1510] Running: csim_design -clean -O 
INFO: [SIM 211-2] *************** CSIM start ***************
INFO: [SIM 211-4] CSIM will launch GCC as the compiler.
INFO: [HLS 200-2036] Building optimized C Simulation binaries
   Compiling ../../../../../fc_finn_tb.cpp in release mode
   Compiling ../../../../../fc_finn_top.cpp in release mode
In file included from /home/coder/Documents/s2n2/finn-hlslib-lif/bnn-library.h:63,
                 from ../../../../../fc_finn_top.cpp:4:
/home/coder/Documents/s2n2/finn-hlslib-lif/fclayer.h: In instantiation of ‘void StreamingFCLayer_Batch(hls::stream<ap_uint<InStreamW> >&, hls::stream<ap_uint<OutStreamW> >&, const TW&, const TA&, unsigned int, const R&) [with unsigned int MatrixW = 8; unsigned int MatrixH = 4; unsigned int SIMD = 1; unsigned int PE = 1; TSrcI = Identity; TDstI = Slice<ap_uint<1>, 1>; TWeightI = Identity; int InStreamW = 1; int OutStreamW = 1; TW = FixedPointWeights<1, ap_int<8>, 1, 32>; TA = ThresholdActivation1; R = ap_resource_dflt]’:
../../../../../fc_finn_top.cpp:76:3:   required from here
/home/coder/Documents/s2n2/finn-hlslib-lif/fclayer.h:108:5: error: no matching function for call to ‘Matrix_Vector_Activate_Batch<8, 4, 1, 1, 1, Identity, Slice<ap_uint<1>, 1>, Identity>(hls::stream<ap_uint<1> >&, hls::stream<ap_uint<1> >&, const FixedPointWeights<1, ap_int<8>, 1, 32>&, const ThresholdActivation1&, const unsigned int&, const ap_resource_dflt&)’
   Matrix_Vector_Activate_Batch<MatrixW, MatrixH, SIMD, PE, 1, TSrcI, TDstI, TWeightI>
   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     (static_cast<hls::stream<ap_uint<SIMD*TSrcI::width>>&>(wa_in),
     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      static_cast<hls::stream<ap_uint<PE*TDstI::width>>&>  (wa_out),
      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      weights, activation, reps, r);
      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /home/coder/Documents/s2n2/finn-hlslib-lif/fclayer.h:55,
                 from /home/coder/Documents/s2n2/finn-hlslib-lif/bnn-library.h:63,
                 from ../../../../../fc_finn_top.cpp:4:
/home/coder/Documents/s2n2/finn-hlslib-lif/mvau.hpp:95:6: note: candidate: ‘template<unsigned int MatrixW, unsigned int MatrixH, unsigned int SIMD, unsigned int SIMDSP, unsigned int PE, unsigned int MMV, class TSrcI, class TDstI, class TWeightI, class TD, unsigned int WIDTH, unsigned int I, unsigned int OFMDim, class TI, class TO, class TW, class TA, class R> void Matrix_Vector_Activate_Batch(hls::stream<TI>&, hls::stream<TO>&, const TW&, const TA&, TD, int, const R&)’
 void Matrix_Vector_Activate_Batch(hls::stream<TI> &in,
      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/coder/Documents/s2n2/finn-hlslib-lif/mvau.hpp:95:6: note:   template argument deduction/substitution failed:
make: *** [csim.mk:85: obj/fc_finn_top.o] Error 1
ERROR: [SIM 211-100] 'csim_design' failed: compilation error(s).
INFO: [SIM 211-3] *************** CSIM finish ***************
INFO: [HLS 200-111] Finished Command csim_design CPU user time: 1.34 seconds. CPU system time: 0.92 seconds. Elapsed time: 10.77 seconds; current allocated memory: 2.281 MB.
4
    while executing
"source fc_finn.tcl"
    ("uplevel" body line 1)
    invoked from within
"uplevel \#0 [list source $arg] "

INFO: [HLS 200-112] Total CPU user time: 4.01 seconds. Total CPU system time: 2.93 seconds. Total elapsed time: 41.18 seconds; peak allocated memory: 1.460 GB.
INFO: [Common 17-206] Exiting vitis_hls at Thu Apr 16 04:25:22 2026...
